[package]
name = "vulkan-revived-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tracing-subscriber = "0.3"
tracing = "0.1"
sdl3 = { version = "0.14", features = ["ash", "raw-window-handle"] }
raw-window-handle = "0.6"
ash = "0.38"
ash-bootstrap = { version = "0.1.3", features = ["enable_tracing"] }
vk-mem = "0.5.0"